@@ -8,6 +8,7 @@ Features added
 --------------
 
 * Add ``:caption:`` option for sphinx.ext.inheritance_diagram.
+* #894: Add ``lualatexpdf`` and ``xelatexpdf`` as a make target to build PDF using lualatex or xelatex
 
 Bugs fixed
 ----------
